Closed Bug 161832 Opened 23 years ago Closed 23 years ago

Contextual Menu not Enabled for 'Content-Type: text/xml' Header

Categories

(Camino Graveyard :: Toolbars & Menus, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
Camino0.9

People

(Reporter: devnull, Assigned: mikepinkerton)

References

()

Details

If a web page has the header of 'Content-Type: text/xml' contextual menus will not appear. Steps to reproduce: 1) Go to http://www.them.ws/backend.php 2) control-click or right-click anywhere Expected Result: Contextual menu to appear Actual Result: No menu appears Here is a header dump for backend.php curl -I http://www.them.ws/backend.php HTTP/1.1 200 OK Date: Fri, 09 Aug 2002 03:32:53 GMT Server: blah blah blah X-Powered-By: PHP/4.1.2 Content-Type: text/xml Age: 0 Connection: close
Confirming. I don't see why you would want to view an XML document of a DOCTYPE Chimera cannot handle (RSS, in this example) as plain output though.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Since Chimera takes it upon itself to "render" the XML file I'd like to see the source to look for weird formatting and whatever. Also to go back, or forward or anyother option that it has in the contextual menus.
xml handling needs work
Assignee: saari → pinkerton
Status: NEW → ASSIGNED
Target Milestone: --- → Chimera0.9
fixed, now we show the document context menu if there are no flags set. "copy" doesn't work, but it doesn't work in mozilla either. will file a new bug for that as it's a moz bug, unrelated to chimera.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Component: General → Toolbars & Menus
QA Contact: winnie → sairuh
vrfy'd fixed with 2003.02.06.15 on 10.2.3.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.