show document context menu when flags are null (bug 161832)